--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/output.css">
 
-    <title>Cartapio Online</title>
+    <title>Menu Burger</title>
 </head>
 
 <body>
