--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <!--FIM DO SCRIPT ANIMATIONS ON SCROLL-->
 
 
-    <title>Menu Burger</title>
+    <title>Super Lubrificantes</title>
 </head>
 
 <body>
@@ -34,21 +34,22 @@
         <div class="w-full h-full flex flex-col justify-center items-center">
             <img
              data-aos="fade-right" data-aos-delay="100"
-             src="./assets/hamb-1.png" alt="Logo da Estabecimento"
-                class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200" />
-            <h1 data-aos="fade-left" data-aos-delay="200" class="text-4xl mt-4 mb-2 font-bold text-white">Burger</h1>
+             src="./assets/logo.jpg" alt="Logo da Estabecimento"
+                class="w-70 h-32 rounded-full shadow-lg hover:scale-110 duration-200" />
+            <h1 data-aos="fade-left" data-aos-delay="200" class="text-3xl mt-4 mb-1 font-bold text-white">Evelim</h1>
+            <h1 data-aos="fade-left" data-aos-delay="200" class="text-2xl mt-4 mb-5 font-bold text-white">Representante Super</h1>
 
-            <span class="text-white font-medium">Rua dev 10,Centro</span>
+            <span class="text-white font-medium">Av. Brino, 456, Porto Alegre</span>
 
             <div data-aos="fade-right" data-aos-delay="250" class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
-                <span>Seg á Dom - 18:00 as 22:00</span>
+                <span>Seg á Sex - 08:30 as 18:00</span>
             </div>
         </div>
     </header>
     <!--FIM DO HEADER-->
     <h2 data-aos="fade-right" data-aos-delay="300"
      class="text-2xl md:3xl font-bold text-center mt-9 mb-6">
-        Conheça nosso Menu</h2>
+        Óleo</h2>
     <!--INICIO MENU-->
     <div id="menu">
 
@@ -56,17 +57,16 @@
             <!--PRODUTO ITEM-->
             <div data-aos="fade-right" data-aos-delay="300"
              class="flex gap-2">
-                <img src="./assets/hamb-1.png" alt="Hamburger Smash"
+                <img src="./assets/oil.png" alt="Oleo mobil"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Hamburger Smash</p>
+                    <p class="font-bold">Óleo 01</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 18,90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburger Smash"
-                            data-price="18,90">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Óleo 01"
+                            data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -78,17 +78,16 @@
             <!--PRODUTO ITEM-->
             <div data-aos="fade-right" data-aos-delay="400"
              class="flex gap-2">
-                <img src="./assets/hamb-2.png" alt="Hamburger Smash"
+                <img src="./assets/oil.png" alt="Oleo mobil"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Hamburger Duplo</p>
+                    <p class="font-bold">Óleo 02</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 32,90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburger Duplo"
-                            data-price="32,90">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Óleo 02"
+                            data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -101,17 +100,16 @@
             <!--PRODUTO ITEM-->
             <div data-aos="fade-right" data-aos-delay="500"
              class="flex gap-2">
-                <img src="./assets/hamb-3.png" alt="Hamburger Salad"
+                <img src="./assets/oil.png" alt="Oleo mobil"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Hamburger Salad</p>
+                    <p class="font-bold">Óleo 03</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 35,90</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburger Salad"
-                            data-price="35,90">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Óleo 03"
+                            data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -124,17 +122,16 @@
             <!--PRODUTO ITEM-->
             <div data-aos="fade-right" data-aos-delay="500"
              class="flex gap-2">
-                <img src="./assets/hamb-4.png" alt="Hamburger da Casa"
+                <img src="./assets/oil.png" alt="Oleo mobil"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div>
-                    <p class="font-bold">Hamburger da Casa</p>
+                    <p class="font-bold">Óleo 04</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 30,00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburger da casa"
-                            data-price="30">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Óleo 04"
+                            data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -144,9 +141,9 @@
             <!--FIM PRODUTO ITEM-->
         </main>
 
-        <div class="mx-auto max-w-7xl px-2 my-2">
-            <h2 class="font-bold text-3xl">
-                Bebidas
+        <div class="mx-auto max-w-7xl px-2 my-2 text-center" >
+            <h2 class="font-bold text-2xl">
+                Filtros
             </h2>
         </div>
 
@@ -158,14 +155,14 @@
 
             <div data-aos="fade-right" data-aos-delay="400"
              class="flex gap-2 w-full">
-                <img src="./assets/refri-1.png" alt="Coca Lata"
+                <img src="./assets/filtro.png" alt="Coca Lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div class="w-full ">
-                    <p class="font-bold">Coca Lata</p>
+                    <p class="font-bold">Filtro 01</p>
+                    <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 6,00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Coca Lata" data-price="6">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Filtro 01" data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -179,15 +176,15 @@
 
             <div data-aos="fade-right" data-aos-delay="500"
              class="flex gap-2 w-full">
-                <img src="./assets/refri-2.png" alt="Guarana Lata"
+                <img src="./assets/filtro02.png" alt="Guarana Lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotates-2 duration-300">
 
                 <div class="w-full ">
-                    <p class="font-bold">Guarana Lata</p>
+                    <p class="font-bold">Filtro 02</p>
+                    <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <p>R$ 6,00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Guarana Lata"
-                            data-price="6">
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Filtro 02"
+                            data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -203,24 +200,50 @@
 
     </div>
     <!--FIM MENU-->
-    <!--MODAL CART-->
+   <!--MODAL CART-->
     <div 
-    class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] flex items-center justify-center hidden"
-    id="cart-modal"
-    >
+        class="bg-black/50 w-full h-full fixed top-0 left-0 z-[99] flex items-center justify-center hidden"
+        id="cart-modal"
+        >
 
-        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px] max-h-[80vh] overflow-y-auto">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
 
             <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
 
-            <p class="font-bold">Endereço de entrega</p>
+            <p class="font-bold py-3">Endereço de entrega</p>
 
             <input placeholder="Digite seu Endereço completo" type="text" id="address"
                 class="w-full border-2 p-1 rounded my-1">
             <p class="text-red-500 hidden" id="address-warn">Digite seu endereço completo</p>
+
+            <p class="font-bold py-3">Nome</p>
+
+            <input placeholder="Digite seu Nome completo" type="text" id="PersonName"
+                class="w-full border-2 p-1 rounded my-1">
+            <p class="text-red-500 hidden" id="Name">Digite seu nome completo</p>
+
+
+            <p class="font-bold py-3">Número para contato</p> 
+            <input placeholder="(99) 9999-9999" type="text" id="PersonPhone"
+            class="w-full border-2 p-1 rounded my-1"/>
+            <p class="text-red-500 hidden" id="Name">(99) 9999-9999</p>
+
+            
+            <p class="font-bold py-3">Selecione a forma de pagamento</p>
+            <select id="paymentMethod" placeholder="Selecione"
+            class="w-full border-2 p-1 rounded my-1">
+                <option value="pix">Pix</option>
+                <option value="dinheiro">Dinheiro</option>
+                <option value="cartao_credito">Cartão de Crédito</option>
+                <option value="cartao_debito">Cartão de Débito</option>
+            </select>
+
+            <p class="font-bold py-3">Prazo para recebimento</p>
+            <input type="date" class="w-full border-2 p-1 rounded my-1" id="deliveryDate" name="deliveryDate"/>
+
 
             <div class="flex items-center justify-between mt-5 w-full">
                 <button id="close-modal-btn">Fechar</button>
@@ -230,11 +253,11 @@
         </div>
 
     </div>
-    <!--FIM MODAL CART-->
+<!--FIM MODAL CART-->
 
 
     <!---BUTTON CART FOOTER-->
-    <footer class="w-full bg-red-500 py-3 fixed bottom-0 z-40 flex  items-center justify-center">
+    <footer class="w-full bg-footer py-3 fixed bottom-0 z-40 flex  items-center justify-center">
         <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
 
             (<span id="cart-count">0</span>)
@@ -242,6 +265,7 @@
             <i class="fa fa-cart-plus text-lg text-white"></i>
         </button>
     </footer>
+
     <!--FIM BUTTON CART FOOTER--->
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
