Versão 1.4 alterando a paleta de cores

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Óleo 01"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Óleo 01"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -92,7 +92,7 @@
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Óleo 02"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Óleo 02"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -114,7 +114,7 @@
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Óleo 03"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Óleo 03"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -136,7 +136,7 @@
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Óleo 04"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Óleo 04"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -170,7 +170,7 @@
                     <p class="font-bold">Filtro 01</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Filtro 01" data-price="0">
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Filtro 01" data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
                     </div>
@@ -191,7 +191,7 @@
                     <p class="font-bold">Filtro 02</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Filtro 02"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Filtro 02"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -228,7 +228,7 @@
                     <p class="font-bold">Aditivo 01</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Filtro 02"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Filtro 02"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -249,7 +249,7 @@
                     <p class="font-bold">Aditivo 02</p>
                     <p class="text-sm">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
-                        <button class="bg-gray px-5 rounded add-to-cart-btn" data-name="Filtro 02"
+                        <button class="bg-stone px-5 rounded add-to-cart-btn hover:scale-110 hover:bg-green" data-name="Filtro 02"
                             data-price="0">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -274,7 +274,7 @@
         id="cart-modal"
         >
 
-        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px] max-h-[80vh] overflow-y-auto">
+        <div class="bg-slate-light text-black p-5 rounded-md min-w-[90%] md:min-w-[600px] max-h-[80vh] overflow-y-auto">
             <i id="close-modal-btn2" class="fa-solid fa-xmark bg-red rounded px-2 py-1 object-rigth mx-3"></i>
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
             
@@ -286,7 +286,7 @@
             <p class="font-bold py-3">Endereço de entrega</p>
 
             <input placeholder="Digite seu Endereço completo" type="text" id="address"
-                class="w-full border-2 p-1 rounded my-1">
+                class="bg-white w-full border-2 p-1 rounded my-1">
             <p class="text-red-500 hidden" id="address-warn">Digite seu endereço completo</p>
 
             <p class="font-bold py-3">Nome</p>
@@ -328,7 +328,7 @@
 
 
     <!---BUTTON CART FOOTER-->
-    <footer class="w-full bg-gray py-3 fixed bottom-0 z-40 flex  items-center justify-center">
+    <footer class="w-full bg-stone py-3 fixed bottom-0 z-40 flex  items-center justify-center">
         <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
 
             (<span id="cart-count">0</span>)
